[package]
name = "gliror"
version = "1.0.2"
edition = "2021"
authors = ["KillDarkness"]
description = "Advanced Rust-based DoS/Load Testing Tool with Concurrent Requests"
license = "MIT"
repository = "https://github.com/KillDarkness/Gliror"
homepage = "https://github.com/KillDarkness/Gliror"
documentation = "https://github.com/KillDarkness/Gliror/blob/main/docs/index.md"
readme = "README.md"
keywords = ["dos", "load-testing", "networking", "security", "tool"]
categories = ["command-line-utilities", "network-programming", "development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["net"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }